--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/Levels/", "res://Object/pnj/", "res://Object/pnj/Scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Dialogues/balloon.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/Levels/", "res://Scenes/Levels/Scripts/", "res://Object/pnj/", "res://Object/pnj/Scripts/", "res://Dialogues/", "res://Character/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Levels/MainLevel.tscn")
-current_scene="res://Scenes/Levels/MainLevel.tscn"
+open_scenes=PackedStringArray("res://Scenes/Levels/MainLevel.tscn", "res://Dialogues/balloon.tscn", "res://Dialogues/small_balloon.tscn", "res://Character/player.tscn")
+current_scene="res://Character/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://addons/dialogue_manager/dialogue_manager.gd", "res://Object/pnj/Scripts/pnj.gd"]
-selected_script="res://addons/dialogue_manager/dialogue_manager.gd"
+open_scripts=["res://Dialogues/balloon.gd", "res://Dialogues/Balloon.gd", "res://Character/Scripts/movements.gd"]
+selected_script="res://Dialogues/Balloon.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
@@ -47,3 +47,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
