--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,10 +21,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 47,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -37,7 +37,7 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 24,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 28,
+"h_scroll_position": 86,
 "row": 46,
 "scroll_position": 41.0,
 "selection": true,
@@ -67,11 +67,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 56,
-"folded_lines": Array[int]([]),
+"column": 0,
+"folded_lines": Array[int]([996, 1051, 1074, 1084, 1111, 1125, 1153, 1163, 1197, 1260, 1278, 1322]),
 "h_scroll_position": 0,
-"row": 347,
-"scroll_position": 347.0,
+"row": 1197,
+"scroll_position": 1014.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -145,6 +145,48 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Dialogues/balloon.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
+"scroll_position": 12.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Character/Camera2D.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Dialogues/Balloon.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
