--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,20 +19,20 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/Levels/", "res://Object/pnj/", "res://Object/pnj/Scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Levels/TileMap.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Levels/", "res://Object/pnj/", "res://Object/pnj/Scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Levels/MainLevel.tscn")
-current_scene="res://Scenes/Levels/MainLevel.tscn"
+open_scenes=PackedStringArray("res://Scenes/Levels/MainLevel.tscn", "res://Scenes/Levels/TileMap.tscn")
+current_scene="res://Scenes/Levels/TileMap.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
